spec/grammar.ebnf
(* hron grammar v2.2.1 — ISO 14977 EBNF *)
(* Human-readable schedule expressions. *)
(* This grammar is documentation only; the parser is hand-written. *)
(* Where this grammar and spec/tests.json differ, tests.json is authoritative. *)
(* Keywords match in any ASCII case, with the spellings listed under "Words" in spec/README.md *)
(* ("days" for "day", "weekdays" for "weekday", "hrs" for "hours", ...). *)

schedule       = expression , [ except_clause ] , [ until_clause ]
               , [ starting_clause ] , [ during_clause ] , [ timezone_clause ] ;

expression     = every_expr | on_expr ;

every_expr     = "every" , repeater ;
on_expr        = "on" , date_target , "at" , time_list ;

(* --- Repeaters --- *)
(* Interval semantics: for day/month/year repeat, when interval > 1, *)
(* the schedule fires only on dates aligned with the anchor: *)
(*   day_repeat:  (date - anchor) mod interval == 0  *)
(*   month_repeat: (month_offset - anchor_month_offset) mod interval == 0 *)
(*   year_repeat: (year - anchor_year) mod interval == 0 *)
(* Default anchor: epoch (1970-01-01). The 'starting' clause overrides it. *)

repeater       = interval_repeat
               | day_repeat
               | week_repeat
               | month_repeat
               | year_repeat ;

(* "every 30 min from 09:00 to 17:00" *)
interval_repeat = number , interval_unit , time_range_clause ;

(* "every day at 09:00", "every weekday at 09:00, 17:00", "every 3 days at 09:00" *)
day_repeat     = ( day_target | number , ( "day" | "days" ) ) , "at" , time_list ;

(* "every week on monday at 09:00", "every 2 weeks on monday at 09:00" *)
week_repeat    = [ number ] , ( "week" | "weeks" ) , "on" , day_list , "at" , time_list ;

(* "every month on the 1st at 09:00", "every 3 months on the 15th at 09:00" *)
month_repeat   = [ number ] , ( "month" | "months" ) , "on" , "the" , month_target , "at" , time_list ;

(* "every year on dec 25 at 00:00", "every 2 years on dec 25 at 00:00" *)
(* "every year on the first monday of march at 10:00" *)
(* "every year on the 15th of march at 09:00" *)
(* "every year on the last weekday of december at 17:00" *)
year_repeat    = [ number ] , ( "year" | "years" ) , "on" , year_target , "at" , time_list ;

year_target    = year_date_target | "the" , year_ordinal_target ;
year_date_target = month_name , ( number | ordinal_day ) ;
year_ordinal_target = ordinal , day_name , "of" , month_name
                    | ordinal_day , "of" , month_name
                    | "last" , "weekday" , "of" , month_name ;

(* --- Time --- *)

time           = HH , ":" , MM ;
time_list      = time , { "," , time } ;

(* The from time must not be later than the to time (equal is one slot a day). *)
time_range_clause = "from" , time , "to" , time , [ "on" , day_target ] ;

(* --- Days --- *)

day_target     = "day" | "weekday" | "weekend" | day_list ;
day_list       = day_name , { "," , day_name } ;
day_name       = "monday"  | "tuesday" | "wednesday" | "thursday"
               | "friday"  | "saturday" | "sunday"
               | "mon" | "tue" | "wed" | "thu" | "fri" | "sat" | "sun" ;

(* --- Month targets --- *)

month_target   = ordinal_day_spec_list | last_target | nearest_weekday_target | ordinal_weekday_target ;
ordinal_day_spec_list = ordinal_day_spec , { "," , ordinal_day_spec } ;
ordinal_day_spec = ordinal_day , [ "to" , ordinal_day ] ;
ordinal_day    = number , ordinal_suffix ;
ordinal_suffix = "st" | "nd" | "rd" | "th" ;
last_target    = "last" , ( "day" | "weekday" ) ;
nearest_weekday_target = [ direction ] , "nearest" , "weekday" , "to" , ordinal_day ;
direction      = "next" | "previous" ;
ordinal_weekday_target = ordinal , day_name ;  (* ordinal includes "last", so "last monday" is parsed here *)

(* --- Date targets (for "on" expressions) --- *)

date_target    = named_date | iso_date ;
named_date     = month_name , ( number | ordinal_day ) ;
iso_date       = YYYY , "-" , MM , "-" , DD ;

month_name     = "january" | "february" | "march" | "april" | "may" | "june"
               | "july" | "august" | "september" | "october" | "november" | "december"
               | "jan" | "feb" | "mar" | "apr" | "may" | "jun"
               | "jul" | "aug" | "sep" | "oct" | "nov" | "dec" ;

(* --- Intervals --- *)

interval_unit  = "min" | "mins" | "minute" | "minutes"
               | "hour" | "hours" | "hr" | "hrs" ;

(* --- Ordinals --- *)

ordinal        = "first" | "second" | "third" | "fourth" | "fifth" | "last" ;

(* --- Trailing clauses (order matters) --- *)

except_clause  = "except" , exception , { "," , exception } ;
exception      = named_date | iso_date ;

(* A named until date has no year: it is valid only with a starting clause, and means the *)
(* first such date on or after the starting date. Without starting it is a parse error. *)
until_clause   = "until" , ( iso_date | named_date ) ;

starting_clause = "starting" , iso_date ;

during_clause  = "during" , month_name , { "," , month_name } ;

timezone_clause = "in" , iana_timezone ;

(* --- Primitives --- *)

(* An interval number is 1..2147483647; every number must fit its field, else a lex or parse error. *)
number         = digit , { digit } ;
digit          = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
HH             = digit , [ digit ] ;
MM             = digit , digit ;
DD             = digit , digit ;
YYYY           = digit , digit , digit , digit ;  (* 0001..9999 *)
(* "UTC", or an Area/Location name from the IANA tz database ("America/Vancouver", *)
(* "Etc/GMT+5"), matched in any case and displayed with the IANA capitalization. Anything *)
(* else, including "EST", "Z", "+05:30" and unknown names, is a parse error. *)
iana_timezone  = "UTC" | area_location ;
area_location  = (* IANA zone or link name containing "/" *) ;
